# ocaml-ai-experiments

./: dune-project  hello_world.install
lib/: .merlin  dune  hello_stubs.cpp  hello_world.ml
lib/config/: .merlin  discover.ml
