(library
 (public_name hello_world)
 (cxx_names hello_stubs)
 (cxx_flags (--std=c++14 -fPIC -I/usr/local/include/opencv4 -lopencv_core -lopencv_imgproc -lopencv_highgui -lopencv_ml -lopencv_video -lopencv_features2d -lopencv_calib3d -lopencv_objdetect -lopencv_contrib -lopencv_legacy -lopencv_stitching)))

