(library
 (public_name hello_world)
 (cxx_names hello_stubs)
 (cxx_flags (:include cxx_flags.sexp) -x c++ --std=c++14 -fPIC)
 (c_library_flags (:include c_library_flags.sexp) -lstdc++))

(rule
 (targets cxx_flags.sexp c_library_flags.sexp)
 (deps    (:discover config/discover.exe))
 (action  (run %{discover} %{ocamlc})))